# Join-Sampling-Backup

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  log  log_new  report.md  run.sh
Alacarte/: README.md
apps/: sjs_gen_dataset.cpp  sjs_run.cpp  sjs_sweep.cpp  sjs_verify.cpp
build_local/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  sjs_gen_dataset
build_local/src/: Makefile  cmake_install.cmake
build_local/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
config/: default.json
config/sweeps/: sweep_alpha.json  sweep_dim.json  sweep_scale.json  sweep_t.json
data/: .gitignore
docs/: SJS_v3.md
include/sjs/baselines/: baseline_api.h
include/sjs/baselines/detail/: adaptive_prefetch.h  vector_join_enumerator.h
include/sjs/baselines/kd_tree/: sampling.h
include/sjs/baselines/ours/: adaptive.h  enum_sampling.h  sampling.h
include/sjs/baselines/range_tree/: adaptive.h  enum_sampling.h  sampling.h
include/sjs/baselines/runners/: adaptive_runner.h  enum_sampling_runner.h  sampling_runner.h
include/sjs/core/: assert.h  config.h  logging.h  rng.h  stats.h  timer.h  types.h
include/sjs/data/synthetic/: clustered.h  generator.h  hetero_sizes.h  stripe_ctrl_alpha.h  uniform.h
include/sjs/geometry/: box.h  embedding.h  point.h  predicates.h
include/sjs/io/: binary_io.h  csv_io.h  dataset.h  realdata_stub.h  write_results.h
include/sjs/join/: join_enumerator.h  join_oracle.h  join_types.h  sweep_events.h
include/sjs/sampling/: alias_table.h  rank_sampling.h  sample_quality.h  weighted_choice.h
results/raw/exp2_sjs_adv_d2/: UNIFIED_EXPERIMENT_REPORT.md
results/raw/exp2_sjs_adv_d2/datasets/F0/: d2_F0_n1000000_a10000_gs1_gen_report.json  d2_F0_n1000000_a100_gs1_gen_report.json  d2_F0_n1000000_a300_gs1_gen_report.json  d2_F0_n500000_a200_gs1_gen_report.json
results/raw/exp2_sjs_adv_d2/datasets/F1/: d2_F1_n1000000_a1000_gs1_gen_report.json  d2_F1_n1000000_a10_gs1_gen_report.json  d2_F1_n1000000_a200_gs1_gen_report.json  d2_F1_n1000000_a3_gs1_gen_report.json
results/raw/exp2_sjs_adv_d2/manifest/: RUN_SUMMARY.txt  manifest_B_N_large.csv  manifest_B_N_small.csv  manifest_C_t_large.csv  manifest_C_t_small.csv  manifest_D_family.csv  manifest_E_budget.csv  manifest_F_high_alpha.csv  tasks_B_N_large.tsv  tasks_C_t_small.tsv  tasks_E_budget.tsv
results/raw/exp2_sjs_adv_d2/manifest/merged/: A_alpha_F0_merged.csv  D_family_F1_merged.csv  E_budget_F0_merged.csv  F_high_alpha_F0_merged.csv
results/raw/exp2_sjs_adv_d2/summary_tables/: E_budget_detail.csv  point_model_medians.csv  sweep_winrates.csv
results/raw/exp2_smoke_fix/datasets/F0/: d2_F0_n1000_a0p1_gs1_gen_report.json
results/raw/exp2_smoke_fix/datasets/F1/: d2_F1_n1000_a0p1_gs1_gen_report.json
results/raw/exp2_smoke_fix/manifest/: RUN_SUMMARY.txt  manifest_E_budget.csv  tasks_D_family.tsv
results/raw/exp2_smoke_fix/manifest/merged/: A_alpha_F0_merged.csv
results/raw/exp2_synth_d2/manifest/: manifest_A_alpha.csv  manifest_B_N.csv  manifest_C_t_large.csv  manifest_C_t_small.csv  tasks_C_t_large.tsv  tasks_C_t_small.tsv
results/raw/exp2_synth_d2/manifest/merged/: A_alpha_merged.csv  B_N_merged.csv  C_t_merged.csv
run/: run_exp0.sh  run_exp1.sh  run_exp2.sh  run_exp3.sh  run_exp4.sh  run_exp5.sh  run_exp6.sh  run_exp7.sh
run/include/: exp1_parse_verify_logs.py  exp2_plot.py  exp3_derive_adaptive_branch_ratio.py  exp3_make_effective_sweep_config.py  exp3_plot.py  exp5_plot_runtime_t.py  exp6_plot.py  exp7_make_sweep_config.py  exp7_postprocess_phase_breakdown.py
run/temp/exp2_sjs_adv_d2/datasets/F0/: d2_F0_n1000000_a0p1_gs1_gen_report.json  d2_F0_n1000000_a0p3_gs1_gen_report.json  d2_F0_n1000000_a1000_gs1_gen_report.json  d2_F0_n1000000_a10_gs1_gen_report.json  d2_F0_n1000000_a1_gs1_gen_report.json  d2_F0_n1000000_a200_gs1_gen_report.json  d2_F0_n1000000_a3000_gs1_gen_report.json  d2_F0_n1000000_a30_gs1_gen_report.json  d2_F0_n1000000_a3_gs1_gen_report.json  d2_F0_n100000_a200_gs1_gen_report.json  d2_F0_n2000000_a200_gs1_gen_report.json  d2_F0_n200000_a200_gs1_gen_report.json  d2_F0_n5000000_a200_gs1_gen_report.json
run/temp/exp2_sjs_adv_d2/datasets/F0\t1000000\t0.1/: x_gen_report.json
run/temp/exp2_sjs_adv_d2/datasets/F1/: d2_F1_n1000000_a0p1_gs1_gen_report.json  d2_F1_n1000000_a0p3_gs1_gen_report.json  d2_F1_n1000000_a100_gs1_gen_report.json  d2_F1_n1000000_a1_gs1_gen_report.json  d2_F1_n1000000_a300_gs1_gen_report.json  d2_F1_n1000000_a30_gs1_gen_report.json
run/temp/exp2_sjs_adv_d2/manifest/: RUN_SUMMARY.txt  manifest_A_alpha.csv  manifest_B_N_large.csv  manifest_C_t_large.csv  manifest_D_family.csv  manifest_E_budget.csv  tasks_A_alpha.tsv  tasks_B_N_small.tsv  tasks_C_t_large.tsv  tasks_D_family.tsv  tasks_F_high_alpha.tsv
run/temp/exp2_sjs_adv_d2/manifest/merged/: A_alpha_F0_merged.csv  A_alpha_F1_merged.csv  B_N_F0_merged.csv  C_t_F0_merged.csv  D_family_F0_merged.csv
run/temp/exp2_sjs_adv_d2/rectgen_presets/: alacarte_rectgen_F0.py  alacarte_rectgen_F1.py
run/temp/exp2_smoke_fix/manifest/: manifest_A_alpha.csv  tasks_A_alpha.tsv
run/temp/exp2_synth_d2/manifest/: FAILURES.tsv  RUN_SUMMARY.txt  manifest_C_t_small.csv  tasks_A_alpha.tsv  tasks_B_N.tsv
src/: CMakeLists.txt
src/baselines/: baseline_factory_2d.cpp  baseline_factory_2d.h  baseline_names.cpp
src/baselines/ours/: adaptive.cpp  enum_sampling.cpp  sampling.cpp
src/baselines/range_tree/: adaptive.cpp  enum_sampling.cpp  sampling.cpp
src/baselines/runners/: instantiations_2d.cpp
src/core/: instantiations_2d.cpp
src/data/: instantiations_2d.cpp
src/data/synthetic/: generator_factory_2d.cpp  instantiations_2d.cpp
src/geometry/: instantiations_2d.cpp
src/io/: load_dataset_2d.cpp  realdata_stub.cpp  write_results.cpp
src/join/: build_events_2d.cpp  instantiations_2d.cpp  oracle_2d.cpp
src/sampling/: instantiations_2d.cpp  quality_checks.cpp
tests/: CMakeLists.txt  test_baselines_smoke.cpp  test_event_sweep.cpp  test_geometry.cpp  test_join_oracle.cpp  test_sampling_quality.cpp  test_write_results.cpp
(+2 files in other folders)
